--- a/work5/eureka-market/pom.xml
+++ b/work5/eureka-market/pom.xml
@@ -10,7 +10,8 @@
 		<module>ms-products</module>
         <module>ms-orders</module>
 		<module>ms-auth</module>
-    </modules>
+		<module>gateway-server</module>
+	</modules>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
