--- a/work8/spring-market/gateway-server/src/main/resources/application.yml
+++ b/work8/spring-market/gateway-server/src/main/resources/application.yml
@@ -29,16 +29,11 @@ spring:
         - id: ms-auth
           uri: lb://ms-auth
           predicates:
-            - Path=/auth/**
-          filters:
-            - StripPrefix=1
+            - Path=/api/*/auth/**
         - id: ms-products
           uri: lb://ms-products
           predicates:
             - Path=/api/*/products/**
-#            - Path=/products/**
-#          filters:
-#            - StripPrefix=1
         - id: ms-orders
           uri: lb://ms-orders
           predicates:
