--- a/work8/spring-market/pom.xml
+++ b/work8/spring-market/pom.xml
@@ -15,6 +15,8 @@
         <module>eureka-server</module>
         <module>gateway-server</module>
         <module>frontend-server</module>
+        <module>routing-lib</module>
+        <module>ms-auth</module>
     </modules>
 
     <properties>
