--- a/work8/spring-market/routing-lib/pom.xml
+++ b/work8/spring-market/routing-lib/pom.xml
@@ -9,18 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ms-products</artifactId>
+    <artifactId>routing-lib</artifactId>
+
 
     <dependencies>
         <dependency>
-            <groupId>ru-geekbrains</groupId>
-            <artifactId>core-lib</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>ru-geekbrains</groupId>
-            <artifactId>routing-lib</artifactId>
-            <version>1.0</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 </project>
